add html area module

--- a/icustom.common/icustom.common.devtools/src/main/resources/application.properties
+++ b/icustom.common/icustom.common.devtools/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 # Enable remote support, for local development you don't need this line
+spring.application.name=icustom-devtoos
 spring.devtools.remote.secret=secret
 
