--- a/icustom.activiti/src/main/resources/application.properties
+++ b/icustom.activiti/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=icustom-activiti
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bootsample?useUnicode=true&characterEncoding=UTF-8
