--- a/icustom.lookup/icustom.lookup.impl/src/main/resources/application.properties
+++ b/icustom.lookup/icustom.lookup.impl/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+spring.application.name=icustom-lookup
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bootsample?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
