--- a/icustom.security/icustom.security.cas/src/main/resources/application.properties
+++ b/icustom.security/icustom.security.cas/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=icustom-cas
 #CAS\u670D\u52A1\u5730\u5740  
 cas.server.host.url=http://localhost:8081/cas  
 #CAS\u670D\u52A1\u767B\u5F55\u5730\u5740  
