html area configuration and page

--- a/icustom.common/icustom.common.excel/pom.xml
+++ b/icustom.common/icustom.common.excel/pom.xml
@@ -40,6 +40,13 @@
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>icustom.common.resources</artifactId>
+			<version>${project.version}</version>
+			<optional>true</optional>
+		</dependency>
+		
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>icustom.common.log</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
