--- a/boot-starters/boot-starter-mybatis/pom.xml
+++ b/boot-starters/boot-starter-mybatis/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
 		<artifactId>boot-starters</artifactId>
-		<version>0.7.10.8</version>
+		<version>0.7.11.8</version>
 		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 
@@ -27,21 +27,21 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>icustom.core</artifactId>
-			<version>0.7.10.8</version>
+			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>common.log</artifactId>
-			<version>0.7.10.8</version>
+			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>common.util</artifactId>
-			<version>0.7.10.8</version>
+			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
 		
