--- a/cloud/cloud-service-feign/pom.xml
+++ b/cloud/cloud-service-feign/pom.xml
@@ -11,8 +11,8 @@
 
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
-		<artifactId>icustom</artifactId>
-		<version>0.7.10.8</version>
+		<artifactId>icustom-boot</artifactId>
+		<version>0.7.11.8</version>
 		<relativePath>../../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
 
