--- a/data/data.jedis-test/pom.xml
+++ b/data/data.jedis-test/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>${project.groupId}</groupId>
-		<artifactId>icustom</artifactId>
-		<version>0.7.10.8</version>
+		<artifactId>icustom-boot</artifactId>
+		<version>0.7.11.8</version>
 		<relativePath>../../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 	<artifactId>data.jedis-test</artifactId>
