--- a/data/data.mongodb/pom.xml
+++ b/data/data.mongodb/pom.xml
@@ -3,8 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
-		<artifactId>icustom</artifactId>
-		<version>0.7.10.8</version>
+		<artifactId>icustom-boot</artifactId>
+		<version>0.7.11.8</version>
 		<relativePath>../../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 	<artifactId>data.mongodb</artifactId>
