--- a/sample/sample.lottery/pom.xml
+++ b/sample/sample.lottery/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>lottery</artifactId>
+	<artifactId>sample.lottery</artifactId>
 	<packaging>jar</packaging>
 
-	<name>lottery</name>
+	<name>sample.lottery</name>
 	<description>lottery project for Spring Boot</description>
 
 	<parent>
