--- a/common/common.api.test/pom.xml
+++ b/common/common.api.test/pom.xml
@@ -37,7 +37,7 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter</artifactId>
+			<artifactId>boot.starter</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
