--- a/boot.starters/boot.starter.mybatis/pom.xml
+++ b/boot.starters/boot.starter.mybatis/pom.xml
@@ -3,15 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>boot-starter-mybatis</artifactId>
+	<artifactId>boot.starter.mybatis</artifactId>
 	<packaging>jar</packaging>
 
-	<name>boot-starter-mybatis</name>
+	<name>icustom.boot.starter.mybatis</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
-		<artifactId>boot-starters</artifactId>
+		<artifactId>boot.starters</artifactId>
 		<version>0.7.11.8</version>
 		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
