--- a/cloud/cloud-eureka-client/pom.xml
+++ b/cloud/cloud-eureka-client/pom.xml
@@ -25,7 +25,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter</artifactId>
+			<artifactId>boot.starter</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
