--- a/common/common.htmlarea/pom.xml
+++ b/common/common.htmlarea/pom.xml
@@ -39,14 +39,14 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-cxf</artifactId>
+			<artifactId>boot.starter.cxf</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-mybatis</artifactId>
+			<artifactId>boot.starter.mybatis</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
@@ -60,7 +60,7 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter</artifactId>
+			<artifactId>boot.starter</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
