--- a/data/data.session/pom.xml
+++ b/data/data.session/pom.xml
@@ -16,7 +16,7 @@
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter</artifactId>
+			<artifactId>boot.starter</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
@@ -30,7 +30,7 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-jedis</artifactId>
+			<artifactId>boot.starter.jedis</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
