--- a/icustom.international/icustom.international.api/pom.xml
+++ b/icustom.international/icustom.international.api/pom.xml
@@ -31,7 +31,7 @@
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-mybatis</artifactId>
+			<artifactId>boot.starter.mybatis</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
