--- a/icustom.international/icustom.international.impl/pom.xml
+++ b/icustom.international/icustom.international.impl/pom.xml
@@ -27,7 +27,7 @@
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter</artifactId>
+			<artifactId>boot.starter</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
@@ -41,14 +41,14 @@
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-mybatis</artifactId>
+			<artifactId>boot.starter.mybatis</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-cxf</artifactId>
+			<artifactId>boot.starter.cxf</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
