--- a/icustom.lookup/icustom.lookup.impl/pom.xml
+++ b/icustom.lookup/icustom.lookup.impl/pom.xml
@@ -29,7 +29,7 @@
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter</artifactId>
+			<artifactId>boot.starter</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
@@ -43,14 +43,14 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-mybatis</artifactId>
+			<artifactId>boot.starter.mybatis</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-cxf</artifactId>
+			<artifactId>boot.starter.cxf</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
