--- a/icustom.test/pom.xml
+++ b/icustom.test/pom.xml
@@ -16,19 +16,19 @@
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter</artifactId>
+			<artifactId>boot.starter</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-mybatis</artifactId>
+			<artifactId>boot.starter.mybatis</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-cxf</artifactId>
+			<artifactId>boot.starter.cxf</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		
