--- a/icustom.web/pom.xml
+++ b/icustom.web/pom.xml
@@ -27,21 +27,21 @@
 		<!-- 启动模块 -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter</artifactId>
+			<artifactId>boot.starter</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		
 		<!-- mybatis扩展支持 -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-mybatis</artifactId>
+			<artifactId>boot.starter.mybatis</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		
 		<!-- cxf扩展支持 -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-cxf</artifactId>
+			<artifactId>boot.starter.cxf</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		
