--- a/metrics/pom.xml
+++ b/metrics/pom.xml
@@ -15,7 +15,7 @@
 	<dependencies>
         <dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter</artifactId>
+			<artifactId>boot.starter</artifactId>
 			<version>${project.version}</version>
 		</dependency>
         <dependency>
