--- a/security/security.ui/pom.xml
+++ b/security/security.ui/pom.xml
@@ -34,7 +34,7 @@
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot-starter-cxf</artifactId>
+			<artifactId>boot.starter.cxf</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		
