--- a/common/common.attachments/pom.xml
+++ b/common/common.attachments/pom.xml
@@ -21,6 +21,12 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>icustom.core</artifactId>
+			<version>${project.version}</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>common.log</artifactId>
 			<version>0.7.11.8</version>
 			<optional>true</optional>
