--- a/boot.starters/boot.starter.cxf/pom.xml
+++ b/boot.starters/boot.starter.cxf/pom.xml
@@ -21,9 +21,15 @@
 		<!-- <dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxws</artifactId>
-			<version>3.1.2</version>
+			<version>3.2.0</version>
 		</dependency> -->
-
+		
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-features-logging</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.fasterxml.jackson.jaxrs</groupId>
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
@@ -32,7 +38,7 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-spring-boot-starter-jaxrs</artifactId>
-			<version>3.1.11</version>
+			<version>3.2.0</version>
 		</dependency>
 
 		<dependency>
@@ -44,7 +50,7 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-rs-service-description</artifactId>
-			<version>3.1.9</version>
+			<version>3.2.0</version>
 		</dependency>
 
 		<dependency>
@@ -55,7 +61,7 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-rs-service-description-swagger</artifactId>
-			<version>3.1.10</version>
+			<version>3.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
