--- a/modules/modules.email/pom.xml
+++ b/modules/modules.email/pom.xml
@@ -6,10 +6,10 @@
 		<groupId>com.gwtjs.icustom</groupId>
 		<artifactId>icustom-boot</artifactId>
 		<version>0.7.11.8</version>
-		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
+		<relativePath>../../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 	
-	<artifactId>email</artifactId>
+	<artifactId>modules.email</artifactId>
 	<packaging>jar</packaging>
 	
 	<dependencies>
