Text Area Search page

--- a/common/common.util/pom.xml
+++ b/common/common.util/pom.xml
@@ -8,18 +8,25 @@
 		<version>0.7.11.8</version>
 		<relativePath>../../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
-	
+
 	<artifactId>common.util</artifactId>
 	<packaging>jar</packaging>
-	
+
 	<dependencies>
-		
+
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<groupId>net.sf.ezmorph</groupId>
+			<artifactId>ezmorph</artifactId>
+			<version>1.0.6</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
+
 	</dependencies>
-	
+
 </project>
