--- a/security/security.core/src/main/resources/application.properties
+++ b/security/security.core/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=icustom-security-core
+# spring.application.name=icustom-security-core
 server.port=8003
 # oracle bootcustom/guang8;
 # mysql  root/guang8
