html area api test case start

--- a/boot.starters/pom.xml
+++ b/boot.starters/pom.xml
@@ -21,6 +21,7 @@
 		<module>boot.starter.cxf</module>
 		<module>boot.starter.mybatis</module>
 		<module>boot.starter.jedis</module>
+		<module>boot.starter.test</module>
 	</modules>
 
 
