--- a/common/icustom.htmlarea.api.test/pom.xml
+++ b/common/icustom.htmlarea.api.test/pom.xml
@@ -33,7 +33,7 @@
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>boot.starter.test</artifactId>
+			<artifactId>boot.test.starter</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
